Fixed right aligned columns. Allow one level of dot-string selectors in all column formats. Added a units property to columns. Added a conversionFactor property to columns for increasing/decreasing values by a multiplier.

--- a/src/components/search/SearchUI/SearchUI.css
+++ b/src/components/search/SearchUI/SearchUI.css
@@ -77,6 +77,18 @@
   border-radius: 6px;
 }
 
+.search-ui .react-data-table .column-header-right {
+  text-align: right;
+}
+
+.search-ui .react-data-table .column-header-center {
+  text-align: center;
+}
+
+.search-ui .react-data-table .column-units {
+  font-weight: normal;
+}
+
 .search-ui .table-header {
   display: flex;
   justify-content: space-between;
